--- a/solutions/authorization/index.asciidoc
+++ b/solutions/authorization/index.asciidoc
@@ -7,9 +7,7 @@
 
 Access control is an important aspect for the security in IT application landscapes. There are two different aspects to distinguish: authentication and authorization.
 
-[link=https://www.ssl2buy.com/wiki/wp-content/uploads/2019/04/authentication-vs-authorization.jpg]
-image::authentication-vs-authorization.jpg[width=70%]
-
+image::authentication-vs-authorization.png[%]
 
 This part deals with the recommendations on authorization, concretely with the general concept and convention. Details how to implement this with specific libraries, or programming-languages are described in the individual stacks of devonfw.
 
