--- a/Manual_for_achitecture_browser/index.asciidoc
+++ b/Manual_for_achitecture_browser/index.asciidoc
@@ -14,7 +14,7 @@ image::fork.PNG[Fork_Repository,100,100]
 The repository is already on your account. You have to click on "code" and copy the url.
 
 image::url.png[URL,300]
-After that, go on your browser and enter "https://gitpod.io#"+url. The repository will be open on the idea Visual Studio.
+After that,please go on your browser prefix the repository URL with https://gitpod.io/#. The repository will be open on the idea Visual Studio.
 
 image::gitpod.png[gitpod,400]
 
@@ -55,6 +55,9 @@ image::pr.png[PR]
 That is important to accept CLA if not yet done.
 
 == Fetch upstream
+
+This should be done before you start creating the tutorial and is only relevant when you are building a tutorial that is not your first tutorials.
+
 The fork will eventually become out of date, you have to make the changes that were made on the main repository. To do that, you have to click on "Fecht upstream " and choose "Fecht and merge".
 
 image::fecht.png[fecht]
