--- a/Manual_for_achitecture_browser/index.asciidoc
+++ b/Manual_for_achitecture_browser/index.asciidoc
@@ -12,14 +12,14 @@ NB: This  is only relevant when you are building a tutorial that is not your fir
 
 The fork will eventually become out of date, you have to make the changes that were made on the main repository. To do that, you have to click on "Fecht upstream " and choose "Fecht and merge".
 
-image::fecht.png2.png[fecht]
+image::fecht.png[fecht]
 
 But if you are creating your first tutorials, then you have to fork the repository.
 
 == Fork repository
 To fork your own copy of devonfw/architectures to your account,  please click on the icon "Fork".
 
-image::fork.png2.png[Fork_Repository,100,100]
+image::fork.png[Fork_Repository,100,100]
 
 == Open the repository on Gitpod
 The repository is already on your account. 
@@ -29,7 +29,7 @@ You have only to go in the Readme.md and click on "https://gitpod.io/from-referr
 == Create/Change File
 To create a new file, you have to click on the icon "new File".
 
-image::newFile.png2.png[newFile] 
+image::newFile.png[newFile] 
 Then give the name to your file and press "Enter".
 
 To change a file, select this file, change the content and save.
@@ -37,23 +37,23 @@ To change a file, select this file, change the content and save.
 == Upload file
 To upload a file, you have to click on the menu button on the far left
 
-image::menu1.png2.png[menu button] 
+image::menu1.png[menu button] 
 select "File", then choose "open File". Enter the name of your file and click "ok". the selected file will be directly opened in the editor.
 
 == Commit and Push
 First of all, you have to create your own branch, to do it, select the icon "source control".
 
-image::sourceControl.png2.png[source Control]
+image::sourceControl.png[source Control]
 
 Go on the icon "view and more action". 
 
-image::menu.png2.png[menu button] 
+image::menu.png[menu button] 
 
 choose "branch" and select "create branch". Give the name of the branch an press "Enter" .
 
 Now you can already do a commit,for this you must first make sure that a change has been made. Select the icon "source control",go on the icon "view and more action" choose "commit", provide the commit message and press "Enter" to confirm.
 
-image::commitMessage.png2.png[commmit]
+image::commitMessage.png[commmit]
 
 
 
@@ -63,7 +63,7 @@ You can push, by clicking again on the icon "source control",go on the icon "vie
 After doing a push, go to your Git account a create a pull request by clicking on "compare & pull request".
 
 
-image::pr.png2.png[PR]
+image::pr.png[PR]
 
 That is important to accept CLA if not yet done.
 
