--- a/solutions/provisioning/index.asciidoc
+++ b/solutions/provisioning/index.asciidoc
@@ -2,8 +2,9 @@
 //Maturity level=Advanced
 
 = Provisioning
+== Provisioning
 
-== Context & Problem
+=== Context & Problem
 
 This document describes the automated build (CI) & deployment (CD) of an application to a target environment. From a code perspective to different code domains are involved: (1) automation code and (2) application/ infra code to be deployed.
 
@@ -63,7 +64,7 @@ In most cases enterprises have already existing technologies in place that might
 The picture below summarizes the major aspects:
 image::Provisioning_Problem_Context.png[Provisioning Problem Context]
 
-== Standard Problems
+=== Standard Problems
 
 The following standard problems will be addressed in subsequent paragraphs:
 
@@ -93,9 +94,9 @@ For the following aspectcs check out the other defined patterns:
 * Monitoring
 * Source code repo structuring 
 
-== Azure as Platform
-=== Automation code
-==== Modelling Environments
+=== Azure as Platform
+==== Automation code
+===== Modelling Environments
 
 Azure provides the following structural elements to model an environment:
 
@@ -105,7 +106,7 @@ Azure provides the following structural elements to model an environment:
 
 An environment can be linked to another environment. Linking an environment to multiple environment is beneficial for addressing cross concerns such as monitoring (Similar to Hub/ Spoke topology in networks).
 
-==== Pipelines
+===== Pipelines
 
 The programming approach can be either UI driven or *programmatic* by using programming languages.
 
@@ -145,7 +146,7 @@ Orchestrated pipelines must pass data between them. The recommended method is to
 
 *Traceability* requires an identifier for referencing artefacts. A standard schema is a semantic version. The platform only supports partial support for number generation such as incrementing numbers (https://ychetankumarsarma.medium.com/build-versioning-in-azure-devops-pipelines-94b5a79f80a0[Link]). Linking the code in the repo to a certain version depends on used repository. 
 
-=== Infrastructure/ Application code
+==== Infrastructure/ Application code
 
 A *programming language* is either "declarative" or "imperative". Declarative programming languages state the target state and it is the job of the declarative programming language how to get there. The following rules are applied to achieve that: (1) Create a resource if not there, (2) update an existing resource if different properties, (3) delete resource if not there. Imperative programming languages state the how. The internal delta calculation needs to be explicitly programmed here. If possible declarative programming languages are recommended due to automatic delta calculation. Typical case is infrastructure.
 
@@ -179,12 +180,12 @@ The created resources should follow a uniform naming schema. This requires namin
 +
 Even if resources are deleted they might still exist in the background (Even although soft delete is not applicable). Programming languages can therefore get confused if pipelines recreate things in short intervals.
 
-=== Cross 
-==== Organizational Mapping
+==== Cross 
+===== Organizational Mapping
 
 The provisioning must match the organizational requirements of your organization. Azure provides services to model sub units within your organization such as departments, projects and teams.
 
-==== Integration
+===== Integration
 
 Platform allows a modular approach to outsource certain functionality to third party software such as code repository. Which parts is service specific.
 
@@ -193,7 +194,7 @@ External tools providing pipelines can be integrated in two conceptual ways:
 * *Trigger automation pipelines from external:* This involves the configuration of a CI pipeline in the external tool such as Jenkins and mechanism in the automation service that invokes the CI process when source code is pushed to a repository or a branch.
 * *Run external pipelines from within the platform:* In this approach automation reaches out to an external tool to work with the results.
 
-==== Configuration
+===== Configuration
 
 Configuration for provisioning is required in various areas:
 
@@ -203,7 +204,7 @@ Configuration for provisioning is required in various areas:
 
 Concrete features used for the above three points depend on the used services. A general storage for sensitive data (Keys, secrets, certificates) in Azure is always Azure Key Vault.
 
-==== Compliance
+===== Compliance
 
 The standard concept for role-based access controls is called RBAC in Azure. It assigns principals (=humans or technical accounts) permissions for a certain resource. Regarding provisioning the following users are relevant:
 
@@ -214,8 +215,8 @@ Azure Active Directory is the central service in Azure that defines and controls
 
 Granularity of roles that can be granted depend on the service. The boundaries in which users exist/ permissions can be assigned is also service specific.
 
-== Solution (Full blown productive)
-=== Overview
+=== Solution (Full blown productive)
+==== Overview
 
 The Azure service targeting a full-blown productive provisioning setup is Azure DevOps.
 
@@ -228,8 +229,8 @@ The services that (can) complement Azure DevOps:
 * Structural elements to model environments
 The picture illustrates the setup with the major dependencies:
 
-=== Pattern Details
-==== Cross
+==== Pattern Details
+===== Cross
 
 *Organiation Mapping)*
 
@@ -287,7 +288,7 @@ The table below lists typical configurations along with their characteristics :
 |Process    |Aligned processes across teams; team flexibility to customize boards, dashboards, and so on     |Different processes per prj;e.g. different work item types, custom fields   |same as many prjs
 |=======================
 
-==== Remaining goals (Automation Code)
+===== Remaining goals (Automation Code)
 
 This chapter now how the above conceptual features can be achieved with Azure DevOps pipelines. 
 
@@ -494,7 +495,7 @@ environment: env-demo
 ```
 --
 
-=== Variations
+==== Variations
 
 For Dev/ Test scenarios the following services exist:
 
@@ -503,6 +504,6 @@ For Dev/ Test scenarios the following services exist:
 ** Azure DevSpaces (Deprecated) in favor of “Bridge-to-kubernetes”
 ** Bridge-to-Kubernetes
 
-== When to use
+=== When to use
 
 This solution assumes that your control plane is in Azure and that your monitored resources are located in Azure.
