--- a/solutions/provisioning/index.asciidoc
+++ b/solutions/provisioning/index.asciidoc
@@ -63,7 +63,7 @@ In most cases enterprises have already existing technologies in place that might
 
 The picture below summarizes the major aspects:
 
-image::provisioning_problem_context.png[Provisioning Problem Context]
+image::problem_context.png[Provisioning Problem Context]
 
 == Standard Problems
 
