--- a/solutions/provisioning/index.asciidoc
+++ b/solutions/provisioning/index.asciidoc
@@ -302,14 +302,11 @@ The table below lists typical configurations along with their characteristics :
 
 ==== Remaining goals (Automation Code)
 
-This chapter now how the above conceptual features can be achieved with Azure DevOps pipelines. 
+This chapter details how the above conceptual features can be achieved with Azure DevOps pipelines. 
 
 For *integration external* supports both conceptual ways.
 
-The *programming approach* can be either UI driven or programmatic by using programming languages.
-
-YAML is supported out of the box. Scripting programming languages are supported out of the box by adding the appropriate task type. The following list describes a few standard problems that were not so obvious from the documentation:
-
+The *programming approach* can be either UI driven or programmatic by using YAML. YAML organizes pipelines into a hierarchy of stages, jobs and tasks. Tasks are the workhorse where activities are implemented. Tasks support scripting languages as stated below. They in turn allow to install additional libraries frameworks from third party providers such as terraform (or you use extensions that give you additional task types). The list below highlights a few YAML points you have to be aware of: 
 * Passing files/ artefacts between jobs/ pipelines
 +
 Passing between jobs within the same pipeline requires publishing the files as pipeline artefacts and downloading it afterwards. Passing between syntax requires a different syntax and also requires a version.
@@ -319,8 +316,6 @@ Variables can have different scopes. A special syntax is required to publish the
 * Obtaining client secret
 +
 Scripting languages such as terraform might require the client secret for embedded scripting blocks. However,  terraform does not provide a way to get it. The only way was to include an AzureCLI scripting task. Setting the argument "addSpnToEnvironment" to true makes the value for scripting languages as environment variable. A script can then publish the variable so that the value is available in the YAML pipeline. 
-
-Terraform requires either manual installation as part of the task or installation of extensions supporting terraform.
 
 Pipelines that shall be *triggered* by pushing to the repo state in the trigger element the details like branch when they shall run.
 The example below shows a scheduled trigger:
